# GunjinShogiResearch

./: .gitignore  .gitmodules  CMakeLists.txt  GunjinShogiCore.pyi  conan_install.bat  conanfile.py  config.json  mid_board_config.json  mini_board_config.json  mini_board_config2.json  module_install.bat  nox_install.bat  pyproject.toml  train_deepnash.py
cpp/: main.cpp
cpp/Action/: Action.cpp  Action.h
cpp/Board/: Board.cpp  Board.h  MakeBoard.cpp  MakeBoard.h
cpp/JudgeBoard/: judge_board.cpp  judge_board.h
cpp/JudgeBoardAdapter/: JudgeBoardAdapter.cpp  JudgeBoardAdater.h
cpp/JudgeTable/: judge_table.cpp  judge_table.h
cpp/common/: Config.cpp  Config.h  EraseFrag.h  GameOverFrag.h  JudgeFrag.h  Piece.h  Player.h
src/Agent/: __init__.py  random_agent.py  rule_base_agent.py
src/Agent/DeepNash/: ITensorBoard.py  SimpleTensorBoard.py  TensorBoard.py  __init__.py  agent.py  cnn_network.py  learner.py  network.py  replay_buffer.py  resnet.py
src/Agent/IS-MCTS/: is_mcts.py
src/Agent/IS_MCTS/: __init__.py  is_mcts.py  learner.py  network.py  replay_buffer.py
src/GUI/: Board.py  Piece.py  __init__.py  agent_vs_gui.py  change_board.py  deploy_gui.py  gui.py  init.py  log_play_gui.py  play_gui.py
src/GUI/Interfaces/: IBoardGUI.py  IPiece.py  __init__.py
src/GUI/assets/: Board_Surface.py  Piece_Surface.py  __init__.py  end_surface.py  make_assets.py
src/GUI/const/: Colors.py  Piece_Surface.py  Sizes.py  __init__.py
src/GunjinShogi/: Board.py  CppJudgeBoard.py  Environment.py  JudgeBoard.py  TensorBoard.py  __init__.py
src/GunjinShogi/Interfaces/: IBoard.py  IJudgeBoard.py  ITensorBoard.py  __init__.py
src/GunjinShogi/const/: Piece.py  (+4 more)
src/Interfaces/: IAgent.py  IEnv.py  __init__.py
src/VS/: __init__.py  agent_vs.py  cpp_agent_vs.py
src/common/: Action.py  Config.py  LogData.py  LogMaker.py  Player.py  __init__.py  change_first_board.py  make_log_pathes.py  make_reflect.py
src/const/: BoardConfig.py  LogPath.py  PieceConfig.py  __init__.py
tests/: Piece_blit_test.py  agent_vs_test.py  board_blit_test.py  board_gui_class_test.py  board_gui_test.py  legal_move_time_test.py  log_play_test.py
tests/scripts/: agent_vs_test.py  agents_vs.py  board_gui_class_test.py  board_gui_test.py  cpp_agent_vs_test.py  cpp_legal_move_time_test.py  cpp_log_play_test.py  cpp_module_test.py  deploy_gui_test.py  human_agent_vs.py  legal_move_time_test.py  log_play_test.py  make_area_ave_loss_graph.py  make_loss_entropy_graph.py  make_loss_graph.py  rule_base_vs.py  train_deepnash.py  train_deepnash_mp.py  train_deepnash_mp2.py  train_deepnash_mt.py  train_win_rate_network.py
